fixes vertical alignment bug

--- a/app/components/Dashboard/TokenBalancesPanel/TokenBalancesPanel.scss
+++ b/app/components/Dashboard/TokenBalancesPanel/TokenBalancesPanel.scss
@@ -79,6 +79,7 @@ a {
   justify-content: center;
   margin: auto;
   max-width: 400px;
+  margin-top: 20px;
 
   .address {
     display: flex;
